--- a/templates/index.html
+++ b/templates/index.html
@@ -89,7 +89,7 @@
                                 <circle cx="15.5" cy="15.5" r="1.5"></circle>
                             </svg>
                         </div>
-                        <div class="vischoice" data-mode="chloropleth" id="viz-chloropleth" title="Choropleth">
+                        <div class="vischoice" data-mode="hexagon" id="viz-hexagon" title="Hexagon">
                             <svg class="viz-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                                 stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M3 7l6-3 6 3 6-3v13l-6 3-6-3-6 3V7z"></path>
